--- a/porfolio.html
+++ b/porfolio.html
@@ -236,7 +236,7 @@
                     </li>
                 </ul>
                 <div class="join-footer-div">
-                    <h3 class="join-footer">присоединяйтесь</h3>
+                    <p class="join-footer">присоединяйтесь</p>
                     <ul class="social-list-footer list">
                         <li class="social-item-footer">
                             <a href="" class="social-link-footer link">
@@ -268,6 +268,16 @@
                         </li>
                     </ul>
                 </div>
+                <div class="subscribe-footer-div">
+                    <p class="subscribe-head-footer">Подпишитесь на рассылку</p>
+                    <form action="#" class="modal-form-footer">
+                        <label>
+                            <input class="modal-input-footer" type="email" name="email" placeholder="E-mail">
+                        </label>
+                        <button type="submit" class="modal-button-footer btn">Подписаться</button>
+                    </form>
+                </div>
+    
             </address>
         </div>
     </footer>
