--- a/index.html
+++ b/index.html
@@ -444,7 +444,11 @@
                                 name="email"
                                 placeholder="E-mail">
                             </label>
-                            <button type="submit" class="modal-button-footer btn">Подписаться</button>
+                            <button type="submit" class="modal-button-footer btn">Подписаться
+                                <svg class="footer-icon-btn">
+                                    <use href="./images/sprite.svg#icon-iconsend"></use>
+                                </svg>
+                            </button>
                         </form>
                     </div>
             
