--- a/porfolio.html
+++ b/porfolio.html
@@ -274,7 +274,11 @@
                         <label>
                             <input class="modal-input-footer" type="email" name="email" placeholder="E-mail">
                         </label>
-                        <button type="submit" class="modal-button-footer btn">Подписаться</button>
+                        <button type="submit" class="modal-button-footer btn">Подписаться
+                            <svg class="footer-icon-btn">
+                                <use href="./images/sprite.svg#icon-iconsend"></use>
+                            </svg>
+                        </button>
                     </form>
                 </div>
     
